--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,11 @@
     </b>  
     </p>
     <p>
-    <b>Modified for PS1 by Jayant Kapoor (f20231099@pilani.bits-pilani.ac.in)</b>
+    <b>Modified and Maintained for PS1 by Jayant Kapoor</b><br/>
+    Email: f20231099@pilani.bits-pilani.ac.in
+    </p>
+    <p>
+    <b>Note:</b> The project data (excel.json) will be regularly updated with the latest PS1 project information. Make sure to update the extension regularly to get the most recent data.
     </p>
     <p>
     To start using the extension, go to the following page, and refresh (press F5): <br/>
@@ -23,6 +27,7 @@
     <p>
     For any issues or suggestions regarding PS1 modifications, contact: <br/>
     Jayant Kapoor <br/>
+    BITS ID: 2023A7PS1099P <br/>
     f20231099@pilani.bits-pilani.ac.in <br/>
     </p>
     <p>
