--- a/popup.html
+++ b/popup.html
@@ -21,8 +21,9 @@
     More controls for easier list sorting, and importing/exporting list will also be present in the pannel. <br/>
     </p>
     <p>
-    Original Github Link:
-    <a href="https://github.com/yvsharma02/PS_Extension">https://github.com/yvsharma02/PS_Extension </a>
+    GitHub Links: <br/>
+    PS1 Extension: <a href="https://github.com/JayKap-Git/PS1_Extension-master">https://github.com/JayKap-Git/PS1_Extension-master</a> <br/>
+    Original PS2 Extension: <a href="https://github.com/yvsharma02/PS_Extension">https://github.com/yvsharma02/PS_Extension</a>
     </p>
     <p>
     For any issues or suggestions regarding PS1 modifications, contact: <br/>
